# QRigami

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  template.env
.github/workflows/: build.yaml  ci.yaml  lint.yaml  test.yaml
nginx/: Dockerfile  nginx.conf
qrigami/: manage.py
qrigami/qrigami/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
qrigami/templates/: base.html
qrigami/templates/web_authn/: email_verification_success.html  signin.html  signup.html
qrigami/web_authn/: apps.py  forms.py  models.py  serializers.py  urls.py  views.py
qrigami/web_authn/migrations/: 0001_initial.py  0002_alter_credentials_options.py  0003_alter_credentials_user.py
