[project]
name = "qrigami"
version = "0.1.0"
description = "QR code generator site"
authors = [
    { name = "Andrew Kozmin", email = "syn.kolbasyn.06@gmail.com" }
]
license = "AGPL-3.0-or-later"
requires-python = ">=3.13, <3.14"
dependencies = [
    "django>=5.1.7",
    "django-cleanup>=9.0.0",
    "django-debug-toolbar>=5.0.1",
    "gunicorn>=23.0.0",
    "sorl-thumbnail>=12.11.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.10",
]

[tool.ruff]
line-length = 79
target-version = "py313"
lint.select = ["ALL"]
lint.ignore = ["D211", "D213"]
