[project]
name = "qrigami"
version = "0.1.0"
description = "QR code generator site"
authors = [
    { name = "Andrew Kozmin", email = "syn.kolbasyn.06@gmail.com" }
]
license = "AGPL-3.0-or-later"
requires-python = ">=3.13, <3.14"
dependencies = [
    "django>=5.1.7",
    "django-cleanup>=9.0.0",
    "django-debug-toolbar>=5.0.1",
    "gunicorn>=23.0.0",
    "psycopg[binary,pool]>=3.2.6",
    "sorl-thumbnail>=12.11.0",
    "tzdata>=2025.1",
    "uvicorn>=0.34.0",
    "webauthn>=2.5.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.10",
]

[tool.ruff]
target-version = "py313"
lint.select = ["ALL"]
lint.ignore = ["D211", "D213"]
